# rekordbox-proof-audio-conversion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: linting.yml  run-tests.yml  type-check.yml
audio_conversion_tools/: convert_audio.py  logging.py  utils.py
audio_conversion_tools/cli/: convert_aiff_to_16bit.py  convert_lossless_to_aiff.py  convert_lossless_to_v0.py  convert_to_rekordbox_playable.py
audio_conversion_tools/rekordbox/: constants.py  conversion.py  convert_audio.py  create_m3u_playlist.py  main.py  revert_conversion.py
scheduler/: schedule.py
scripts/: convert_aiff_to_16bit.py  convert_lossless_to_aiff.py  convert_lossless_to_v0.py
scripts/file_specific/: convert_file_to_aiff_16_bit.py
scripts/sh/: template_convert_all_aiff_to_16bit.sh  template_convert_all_lossless_to_aiff.sh
tests/: convert_audio_test.py  utils_test.py
tests/cli/: convert_aiff_to_16bit_test.py  convert_lossless_to_aiff_test.py  convert_lossless_to_v0_test.py  convert_to_rekordbox_playable_test.py  test_convert_aiff_to_16bit.py  test_convert_lossless_to_aiff.py
tests/rekordbox/: conversion_test.py  create_m3u_playlist_test.py  revert_conversion_test.py
tests/test_audio/: silence.aiff
