[tool.poetry]
name = "audio-conversion-tools"
version = "0.1.0"
description = ""
authors = ["tammohesselink <84312138+tammohesselink@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "audio_conversion_tools"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pre-commit = "^3.4.0"
pandas = "^2.1.2"
pyrekordbox = "0.1.5"
loguru = "^0.7.0"
mutagen = "^1.46.0"
pydub = "^0.25.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = []

[tool.black]
line-length = 120
preview = true
target-version = ['py311']

[tool.autoflake]
in-place = true
remove-unused-variables = true
remove-all-unused-imports = true
exclude = ['test_*.py', '__init__.py']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rekordbox-convert-unplayable-files = "audio_conversion_tools.rekordbox.main:main"
rekordbox-revert-conversion = "audio_conversion_tools.rekordbox.revert_conversion:main"
