[project]
name = "audio-conversion-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "tammohesselink", email = "84312138+tammohesselink@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pre-commit>=3.4.0",
    "pandas>=2.1.2",
    "pyrekordbox>=0.2.2",
    "loguru>=0.7.0",
    "mutagen>=1.46.0",
    "pydub>=0.25.1",
    "typer>=0.9.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.11",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[project.scripts]
rekordbox-convert-unplayable-files = "audio_conversion_tools.rekordbox.main:main"
rekordbox-revert-conversion = "audio_conversion_tools.rekordbox.revert_conversion:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

select = ["ALL"]
ignore = [
    "D",  # Ignore docstring rules
    "ANN", # Ignore type annotation rules
    "FBT", # Ignore boolean trap rules
    "ERA", # Ignore eradicate rules
    "INP", # Ignore init-py rules
    "TCH", # Ignore type-checking rules
    "A",   # Ignore builtins shadowing rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.autoflake]
in-place = true
remove-unused-variables = true
remove-all-unused-imports = true
exclude = ['test_*.py', '__init__.py']
