[project]
name = "audio-conversion-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "tammohesselink", email = "84312138+tammohesselink@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pre-commit>=3.4.0",
    "pandas>=2.1.2",
    "pyrekordbox>=0.2.2",
    "loguru>=0.7.0",
    "mutagen>=1.46.0",
    "pydub>=0.25.1",
    "typer>=0.9.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.11",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
rekordbox-convert-unplayable-files = "audio_conversion_tools.rekordbox.main:main"
rekordbox-revert-conversion = "audio_conversion_tools.rekordbox.revert_conversion:main"
convert-to-rekordbox-playable = "audio_conversion_tools.cli.convert_to_rekordbox_playable:main"
convert-aiff-to-16bit = "audio_conversion_tools.cli.convert_aiff_to_16bit:main"
convert-lossless-to-aiff = "audio_conversion_tools.cli.convert_lossless_to_aiff:main"
convert-lossless-to-v0 = "audio_conversion_tools.cli.convert_lossless_to_v0:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "audio_conversion_tools.*",
]
ignore_errors = true
